# containercraft

./: .pre-commit-config.yaml  LICENSE.md  README.md  app.py  pyproject.toml  setup.sh
containercraft/: app.py
containercraft/templates/: devcontainer.json.template  devcontainer_template.json  docker_template  startup.sh
sample_workspace/: sample.py  test_sample.py
templates/: docker_template
