[tool.poetry]
name = "containercraft"
version = "0.1.0"
description = ""
authors = ["Sidharth Suresh <sidharths194@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
containercraft = "containercraft.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
